style fix for overflow

--- a/src/stylesheets/style.sass
+++ b/src/stylesheets/style.sass
@@ -52,7 +52,7 @@ body
   max-height: 100vh
   background-color: $off-white
   color: $orange
-
+  overflow: hidden
 
   font-family: $poppins
 
